--- a/client/pom.xml
+++ b/client/pom.xml
@@ -21,7 +21,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.1</version>
                 <configuration>
-                    <mainClass>Main</mainClass>
+                    <mainClass>client.Main</mainClass>
                 </configuration>
             </plugin>
             <plugin>
@@ -37,9 +37,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>
-                                        Main
-                                    </mainClass>
+                                    <mainClass>client.Main</mainClass>
                                 </manifest>
                             </archive>
                             <descriptors>
@@ -69,7 +67,6 @@
             <artifactId>tyrus-standalone-client</artifactId>
             <version>2.1.4</version>
         </dependency>
-        
     </dependencies>
 
 </project>
